--- a/package.json
+++ b/package.json
@@ -10,19 +10,28 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.2.0",
+    "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-slider": "^1.2.3",
     "@tailwindcss/vite": "^4.0.6",
     "astro": "^5.2.5",
     "better-sqlite3": "^11.8.1",
+    "class-variance-authority": "^0.7.1",
     "csv-parser": "^3.2.0",
-    "fs": "^0.0.1-security",
+    "embla-carousel-react": "^8.5.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
-    "react-router-dom": "^7.1.5",
+    "react-router-dom": "^7.2.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^3.0.1",
+    "vaul": "^1.1.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.2",
