--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "postcss": "^8.5.2",
     "tailwindcss": "^4.0.6",
     "typescript": "^5.7.3"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
