--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "embla-carousel-react": "^8.5.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
-    "react-router-dom": "^7.2.0",
+    "react-router": "^6.30.0",
+    "react-router-dom": "^6.30.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^3.0.1",
@@ -41,6 +42,6 @@
     "typescript": "^5.7.3"
   },
   "engines": {
-    "node": "20.x"
+    "node": "18.x"
   }
 }
