--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.2.0",
+    "@astrojs/tailwind": "^6.0.0",
     "@astrojs/vercel": "^8.1.1",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -42,7 +43,7 @@
     "@types/node": "^22.13.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.12",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
   },
   "engines": {
