--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.0.6",
+    "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.2.5",
     "better-sqlite3": "^11.8.1",
     "class-variance-authority": "^0.7.1",
