--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "embla-carousel-react": "^8.5.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
+    "react-imgix": "^9.10.0",
     "react-router": "^6.30.0",
     "react-router-dom": "^6.30.0",
     "sqlite": "^5.1.1",
